objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>L2I_END_DATE_ACTIVE_HEADER__c</fullName>
        <label>End Date Active Header</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_HEADER_COMMENTS__c</fullName>
        <label>Header Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_HEADER_ROUNDING_FACTOR__c</fullName>
        <label>Header Rounding Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Default_Pricebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IFEC Default Pricebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <description>Field used for migrating data(configuration data) from one environment to another.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_PRICE_LIST_HEADER_ID__c</fullName>
        <label>Price List Header Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_START_DATE_ACTIVE_HEADER__c</fullName>
        <label>Start Date Active Header</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.IS_ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>